# hindsight

./: Cargo.toml  README.md  mise.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: claude-code-review.yml  release.yml
scripts/: dev-shell.sh  seed-dev-db.sh
src/: config.rs  db.rs  init.rs  main.rs
