[package]
name = "hindsight"
version = "0.2.0"
edition = "2021"
description = "A fast command history recorder and search tool for zsh"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
anyhow = "1"
serde_json = "1"
regex = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"

[profile.release]
strip = true
